<resources>
    <string name="app_name">UrbanCloset</string>
    <string name="mens_collection">MENS COLLECTION</string>
    <string name="womens_collection">WOMEN COLLECTION</string>
    <string name="newest_collection">NEWEST COLLECTION</string>
    <string name="size">Size :</string>
    <string name="price">Price :</string>
    <string name="productname">product Name</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="updatecart">Update Cart</string>
    <string name="product_image">Product Image</string>
    <string name="categoryname">Category Name</string>
    <string name="update_wishlist">update wishlist</string>
    <string name="UsernameHint">Enter UserName</string>
    <string name="PasswordHint">Enter Password</string>
    <string name="PhoneNumberHint">Enter PhoneNumber</string>
    <string name="BtnSignUpHint">SignUp</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="signup_image">Signup Image</string>
    <string name="EmailHint">Enter Email Address</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_order">My Orders</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="total_price">Total Price:</string>
    <string name="date">Date:</string>
    <string name="status">Status:</string>
    <string name="defaultsize">1</string>
    <string name="login">LogIn</string>
    <string name="women_collection">WOMEN COLLECTION</string>
    <string name="scroll_to_top">Scroll To Top</string>
    <string name="cart">Cart</string>
    <string name="rupeetext">₹</string>
    <string name="checkout">CHECKOUT</string>
    <string name="place_order">Place Order</string>
    <string name="change_naddress">Change Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="emptycart">Your Cart Is Empty\nAdd Products To Cart</string>
    <string name="emptyWishlist">Your Wishlist Is Empty\nAdd Products To Wishlist</string>
    <string name="loginerrorcart">Login To See\nYour Cart</string>
    <string name="loginerrorwishlist">Login To See\nYour Wishlist</string>
    <string name="loginerrororder">Login To See\nYour Order History</string>
    <string name="emptyorder">Purchase Products To See Your Order History</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="order_history">ORDER HISTORY</string>
    <string name="urban_closet">URBAN CLOSET</string>
    <string name="a_store_that_sell_style">A STORE THAT SELL STYLE</string>
    <string name="logout">Logout</string>

    <string-array name="size_menu">
        <item>M</item>
        <item>X</item>
        <item>L</item>
    </string-array>
</resources>