<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/menuhome"
    android:title="@string/menu_home"
    android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/menuorder"
        android:title="@string/menu_order"
        android:icon="@drawable/ic_order" />
    <item
        android:id="@+id/menucart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart" />
    <item
        android:id="@+id/menuwishlist"
        android:title="@string/menu_wishlist"
        android:icon="@drawable/ic_fav" />
    <item
        android:id="@+id/menuprofile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile"
        />
    <item
        android:id="@+id/menulogin"
        android:title="@string/login"
        android:icon="@drawable/ic_login"
        />
    <item
        android:id="@+id/menulogout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        />
</menu>