<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wishlist">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_margin="10sp"
        android:background="@drawable/carttile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/productimage"
                android:src="@drawable/product"
                android:layout_width="100sp"
                android:layout_height="170sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/product_image"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="8dip"/>

            <TextView
                android:id="@+id/categoryname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15sp"
                android:text="@string/categoryname"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15sp"
                android:text="@string/productname"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@+id/categoryname"
                app:layout_constraintStart_toEndOf="@+id/productimage"
             />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:text="@string/price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@+id/productname"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_cart"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:insetLeft="0sp"
                android:insetTop="0sp"
                android:insetRight="0sp"
                android:insetBottom="0sp"
                android:padding="0sp"
                app:icon="@android:drawable/ic_menu_search"
                app:iconSize="20sp"
                android:text="@string/updatecart"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="61dp"
                android:layout_height="20dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="8sp"
                android:insetLeft="0sp"
                android:insetTop="0sp"
                android:insetRight="0sp"
                android:insetBottom="0sp"
                android:padding="0sp"
                android:text="@string/delete"
                android:textColor="#DD2C00"
                app:layout_constraintTop_toBottomOf="@+id/btn_update_cart"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>