<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/productname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/productname"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/size"
        />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/size"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@id/productname"
        app:layout_constraintTop_toBottomOf="@+id/productname"
        app:layout_constraintBottom_toTopOf="@+id/price"
        />

    <TextView
        android:id="@+id/sizevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:text="M"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@+id/size"
        app:layout_constraintTop_toTopOf="@+id/size"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/size"
        app:layout_constraintTop_toBottomOf="@+id/size"
        app:layout_constraintBottom_toTopOf="@+id/quantity"
        />

    <TextView
        android:id="@+id/totalpricevalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$999"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/sizevalue"
        app:layout_constraintTop_toTopOf="@+id/price" />
    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/quantity"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/quantityvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@+id/sizevalue"
        app:layout_constraintTop_toTopOf="@+id/quantity"
        />

</androidx.constraintlayout.widget.ConstraintLayout>