<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_margin="10sp"
        android:background="@drawable/carttile"
        layout_constraintBottom_toBottomOf="parent"
        layout_constraintEnd_toEndOf="parent"
        layout_constraintHorizontal_bias="0.492"
        layout_constraintStart_toStartOf="parent"
        layout_constraintTop_toTopOf="parent"
        layout_constraintVertical_bias="0.073"
        android:elevation="10sp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/productimage"
                android:src="@drawable/product"
                android:layout_width="100sp"
                android:layout_height="170sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/product_image"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="8dip"/>

            <TextView
                android:id="@+id/categoryname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/categoryname"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                app:layout_constraintTop_toTopOf="parent"
/>


            <TextView
                android:id="@+id/productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="15sp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/productname"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toBottomOf="@+id/categoryname"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                app:layout_constraintBottom_toTopOf="@id/price"/>


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:text="@string/price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@+id/productname"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                app:layout_constraintBottom_toTopOf="@id/btn_delete"
                />

            <TextView
                android:id="@+id/pricevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$999"
                android:layout_marginStart="10sp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@+id/price"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="61dp"
                android:layout_height="20dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="20sp"
                android:insetLeft="0sp"
                android:insetTop="0sp"
                android:insetRight="0sp"
                android:insetBottom="0sp"
                android:padding="0sp"
                android:text="@string/delete"
                android:textColor="#DD2C00"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintStart_toEndOf="@+id/productimage"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>