<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_margin="10sp"
        android:background="@drawable/carttile"
        layout_constraintBottom_toBottomOf="parent"
        layout_constraintEnd_toEndOf="parent"
        layout_constraintHorizontal_bias="0.492"
        layout_constraintStart_toStartOf="parent"
        layout_constraintTop_toTopOf="parent"
        layout_constraintVertical_bias="0.073"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<!--            <com.makeramen.roundedimageview.RoundedImageView-->
<!--                android:id="@+id/productimage"-->
<!--                android:src="@drawable/product"-->
<!--                android:layout_width="100sp"-->
<!--                android:layout_height="170sp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:contentDescription="@string/product_image"-->
<!--                android:scaleType="fitCenter"-->
<!--                layout_constraintStart_toStartOf="parent"-->
<!--                layout_constraintTop_toTopOf="parent"-->
<!--                riv_corner_radius="8dip"/>-->
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/productimage"
                android:src="@drawable/product"
                android:layout_width="100sp"
                android:layout_height="170sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/product_image"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="8dip"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="150sp"
                android:layout_height="170sp"
                app:layout_constraintStart_toEndOf="@id/productimage"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/productname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/productname"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/size"
                    />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:text="@string/size"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productname"
                    app:layout_constraintBottom_toTopOf="@+id/price"
                    />

                <TextView
                    android:id="@+id/sizevalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50sp"
                    android:text="M"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toEndOf="@+id/size"
                    app:layout_constraintTop_toTopOf="@+id/size"
                    />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/price"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/size"
                    app:layout_constraintTop_toBottomOf="@+id/size"
                    app:layout_constraintBottom_toTopOf="@+id/quantity"
                    />

                <TextView
                    android:id="@+id/totalpricevalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$999"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/sizevalue"
                    app:layout_constraintTop_toTopOf="@+id/price" />
                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/quantity"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/price"
                    app:layout_constraintTop_toBottomOf="@+id/price"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/quantityvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/sizevalue"
                    app:layout_constraintTop_toTopOf="@+id/quantity" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
